--- a/schoolTest/Views/Home/Index.cshtml
+++ b/schoolTest/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
 
                 <!-- Slide 3 -->
                 <div class="carousel-item" style="background: url(/assets/img/slide/slide-4.jpg); background-repeat:no-repeat; background-size: 100% 100%" ">
-                    @*<div class="carousel-background"><img src="/assets/img/slide/slide-4.jpg" alt=""></div>*@
+                   
                     <div class="carousel-container">
                         <div class="carousel-content">
                             <h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
@@ -148,7 +148,7 @@
 
     </div>
 </section><!-- End Gallery Section -->
-<!-- ======= Chefs Section ======= -->
+<!-- ======= Chefs Section = -->
 <section id="chefs" class="chefs">
     <div class="container">
 
