--- a/schoolTest/Views/TeacherPage/Index.cshtml
+++ b/schoolTest/Views/TeacherPage/Index.cshtml
@@ -12,7 +12,7 @@
             <div class="card my-4">
                 <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
                     <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
-                        <h4 class="text-white text-capitalize ps-3" style="text-align:center">Student</h4>
+                        <h4 class="text-white text-capitalize ps-3" style="text-align:center">Teacher</h4>
                     </div>
                 </div>
                 <div class="card-body px-0 pb-2">
